# arbiter-app

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  NATIVE_PLAN.md  README.md  build.rs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
arbiter-native/: Cargo.toml
arbiter-native/examples/: rasterize_logo.rs
arbiter-native/icons/: icon.icns
arbiter-native/src/: claude.rs  claude_shim.rs  claude_status.rs  font.rs  git.rs  gpu.rs  lib.rs  main.rs  persist.rs  raster.rs  session.rs  shell.rs  term.rs
examples/: dumpgrid.rs
portable-pty/src/: unix.rs
src/: App.vue  OverviewApp.vue  claude.rs  claude_shim.rs  claude_status.rs  color.css  font.rs  git.rs  gpu.rs  main.rs  main.ts  persist.rs  raster.rs  session.rs  shell.rs  style.css  term.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: auth.json  default.json  overview.json
src-tauri/icons/: icon.icns
src-tauri/icons/arbiter-app.icon/: icon.json
src-tauri/portable-pty/src/win/: psuedocon.rs
src-tauri/src/: claude.rs  claude_shim.rs  config.rs  fs.rs  git.rs  lib.rs  macos.rs  macos_fps.rs  main.rs  overview.rs  pty.rs  shell.rs  spike.rs  termgrid.rs  usage.rs  util.rs
src/components/: ClaudeIcon.vue  ClaudeWorkingIcon.vue  CloseDialog.vue  CometTrail.vue  ConfirmDialog.vue  DebugFooter.vue  FileExplorer.vue  FileExplorerContextMenu.vue  FileExplorerNode.vue  GitIcon.vue  GitMenu.vue  HexPulse.vue  LoaderShowcaseDialog.vue  MdiIcon.vue  NeuralPulse.vue  OrgSelectionDialog.vue  ParticleOrbV2.vue  ProjectWorkspaceView.vue  PulseLoader.vue  RobotIcon.vue  SettingsDialog.vue  SharedTerminalCanvas.vue  ShortcutsDialog.vue  SplitView.vue  StatsBar.vue  TerminalFooter.vue  TerminalInfoPanel.vue  TerminalPane.vue  WindowControls.vue  WorkspaceTabs.vue  WorktreeCard.vue  WorktreeContextMenu.vue  WorktreeEndDialog.vue  WorktreeNewDialog.vue  WorktreePanel.vue
src/composables/: gitBashPath.ts  singleCanvasRenderer.ts  terminalSessionCache.ts  useAutosave.ts  useConfirm.ts  useKeyboardShortcuts.ts  useStartupRestore.ts  useTerminalGrid.ts  useWindowChrome.ts  useXtermInstance.ts
src/spike/: TransportSpike.vue
src/stores/: devSettings.ts  filesSettings.ts  pane.ts  paneClaudeEvents.ts  perf.ts  project.ts  usage.ts
src/themes/: terminalThemes.ts
src/types/: config.ts  pane.ts
src/utils/: attachFiles.ts  claudePricing.ts  fileIcons.ts  paneTree.ts  robotIcon.ts  shellIdle.ts  spatial.ts
