[package]
name = "arbiter-native"
version = "1.0.5"
edition = "2021"
publish = false
description = "Run many Claude Code sessions side by side"
# Don't auto-discover bins: src/bin/file_icons.rs is a *module* of iced_shell
# (sibling of the crate root), not a binary. List the real bins explicitly.
autobins = false

[[bin]]
name = "arbiter-native"
path = "src/main.rs"

[[bin]]
# The user-facing app/exe is "arbiter" (Arbiter.app on macOS, arbiter.exe on
# Windows). Source file keeps its historical name. Run: cargo run --bin arbiter
name = "arbiter"
path = "src/bin/iced_shell.rs"

# Desktop bundling (cargo-packager): produces Arbiter.app/.dmg (macOS) and an
# NSIS installer (Windows, which also installs the WebView2 runtime the usage
# helper needs). Matches the web app's product name + identifier. Signing fields
# (macos.signingIdentity / notarizationCredentials, windows.certificateThumbprint)
# are intentionally omitted — supplied via env/CI when certs are available.
# camelCase keys, deny_unknown_fields — keep names exact.
[package.metadata.packager]
productName = "Arbiter"
identifier = "com.arbiter.app"
binaries = [{ path = "arbiter", main = true }]
icons = [
    "icons/icon.icns",
    "icons/icon.ico",
    "icons/128x128@2x.png",
    "icons/128x128.png",
    "icons/32x32.png",
]

[package.metadata.packager.macos]
minimumSystemVersion = "11.0"

# DMG layout: the classic "drag the app onto Applications" Finder window — app on
# the left, the Applications folder on the right, in a sized window (instead of a
# plain file list).
[package.metadata.packager.dmg]
windowSize = { width = 660, height = 400 }
appPosition = { x = 180, y = 170 }
appFolderPosition = { x = 480, y = 170 }

[dependencies]
# Vendored PTY layer (cross-platform/ConPTY) — kept at the repo root after the
# web app was removed (was src-tauri/portable-pty).
portable-pty = { path = "portable-pty" }
# Same VT parser + cell grid the shipping app already uses.
alacritty_terminal = "0.26"
# Native window + GPU (no webview). wgpu pinned to 0.19 to match Iced 0.13's
# wgpu, so the terminal renderer's types interoperate with Iced's shader widget.
winit = "0.30"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
# Glyph metrics (ab_glyph) + cross-platform system-font discovery (fontdb).
ab_glyph = "0.2"
fontdb = "0.18"
# Glyph rasterisation with hinting — the same rasteriser Iced uses, so terminal
# text is as crisp as the chrome at 1x (ab_glyph is unhinted → soft at 12px).
swash = "0.1"
# Per-OS data dir (zsh shell-integration files) + process-tree scan (Claude detection).
dirs = "5"
# Build/parse Claude's statusLine + hook JSON (the Tier-2/3 capture shim) +
# (de)serialize the saved session layout for autosave/restore.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
# Native filesystem watching (FSEvents/ReadDirectoryChangesW/inotify) so the
# footer's git refreshes on external edits without polling — like VS Code.
notify-debouncer-mini = "0.4"
# App shell / chrome (tabs, splits, settings, …). The terminal renderer is
# hosted inside Iced via its custom `shader` widget (needs the wgpu + advanced
# features). Used by the `iced` binary; the raw winit spike (default bin) doesn't.
iced = { version = "0.13", features = ["wgpu", "advanced", "tokio", "svg", "image"] }
# Rasterize the logo SVG ourselves at the EXACT physical pixel size (1:1, no
# resampling) so it's crisp — iced nearest-samples SVGs and bilinear-softens
# downscaled rasters. Same engine iced uses internally; already in the tree.
resvg = "0.42"
# Native folder picker + message box for creating project workspaces.
rfd = "0.15"
# Procedural worktree avatars: draw a deterministic glyph from the branch name to
# an RGBA buffer. Pinned to resvg 0.42's tiny-skia so no duplicate crate is added.
tiny-skia = "0.11"
# File-explorer "Delete" moves to the OS trash (recoverable), like the web app's
# `trash_path`. Cross-platform (Finder Trash / Recycle Bin / freedesktop).
trash = "5"

# Claude usage bars: a native webview (WebView2 on Windows, WKWebView on macOS)
# logs into claude.ai and polls the usage API, streaming JSON to the app over
# stdout. It runs in its OWN process (the webview never touches the terminal loop)
# but the SAME binary — `iced_shell` re-spawns itself with `--usage-helper`
# (src/bin/usage_helper.rs, included as a module). Optional + feature-gated so
# normal `iced_shell` builds don't compile wry/tao.
wry = { version = "0.45", optional = true }
tao = { version = "0.30", optional = true }
# Standard Edit menu (Cut/Copy/Paste/Select-All) for the sign-in window so Cmd+V
# works in the claude.ai webview (macOS needs a menu item to bind ⌘V).
muda = { version = "0.13", optional = true }

[features]
# On by default so `cargo run --bin iced_shell` builds the usage webview with no
# extra flags. Opt out with `--no-default-features` for a lean build (no wry/tao;
# on Linux that also avoids needing webkit2gtk dev libs).
default = ["usage-helper"]
# webview2-com is Windows-only (declared under [target.'cfg(windows)'.dependencies]),
# so this `dep:` activates it only when targeting Windows; mac builds ignore it.
usage-helper = ["dep:wry", "dep:tao", "dep:muda", "dep:webview2-com"]

# Platform-native glyph rasterisation so terminal text matches the OS's own text
# rendering (and thus the webview): CoreText on macOS. Versions pinned to those
# already in the tree (via winit) to avoid duplicate Apple crates.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"
core-text = "20"
# Reposition the macOS traffic lights to match the web (Tauri trafficLightPosition
# {14,22}); iced/winit expose no API. objc2 versions pinned to those already in the
# tree (via winit) to avoid duplicate crates.
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSGeometry"] }
# Block-based NSNotificationCenter observer so the traffic lights re-inset
# synchronously when AppKit posts NSWindowDidResize (no resize flicker).
block2 = "0.5"

# Windows-native glyph rasterisation (DirectWrite + Direct2D + WIC): system font
# fallback + colour emoji, the OS-native equivalent of the macOS CoreText path.
# Only pulled when targeting Windows.
# Vendored fork of iced_winit 0.13.0 with two macOS-only additions the upstream
# crate lacks: it enables IME on the window (`set_ime_allowed`) and forwards
# `WindowEvent::Ime::Commit` as a key event, so dead-key accents (¨+e → ë) compose
# in the terminal. Windows/Linux conversion is unchanged. See vendor/iced_winit.
[patch.crates-io]
iced_winit = { path = "vendor/iced_winit" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Dxgi_Common",
] }
# WebView2 suspend/resume (ICoreWebView2_3) for the hidden usage helper — keeps the
# backgrounded renderer fetching. Same version wry 0.45 uses (windows-core 0.58, so
# no duplicate). Optional, pulled only by the usage-helper feature.
webview2-com = { version = "0.33", optional = true }

# Embed the app icon into the Windows .exe (Explorer + the NSIS shortcut show it).
# cargo-packager doesn't modify the binary, so the icon must be a Win32 resource
# compiled in at build time — see build.rs.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

