[package]
name = "arbiter-native"
version = "0.0.0"
edition = "2021"
publish = false
description = "Native (no-webview) Arbiter — Phase 0 spike. See ../NATIVE_PLAN.md"

[dependencies]
# Reuse the same PTY layer the shipping app uses (vendored, cross-platform/ConPTY).
portable-pty = { path = "../src-tauri/portable-pty" }
# Same VT parser + cell grid the shipping app already uses.
alacritty_terminal = "0.26"
# Native window + GPU (no webview). wgpu pinned to 0.19 to match Iced 0.13's
# wgpu, so the terminal renderer's types interoperate with Iced's shader widget.
winit = "0.30"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
# Glyph metrics (ab_glyph) + cross-platform system-font discovery (fontdb).
ab_glyph = "0.2"
fontdb = "0.18"
# Glyph rasterisation with hinting — the same rasteriser Iced uses, so terminal
# text is as crisp as the chrome at 1x (ab_glyph is unhinted → soft at 12px).
swash = "0.1"
# Per-OS data dir (zsh shell-integration files) + process-tree scan (Claude detection).
dirs = "5"
# Build/parse Claude's statusLine + hook JSON (the Tier-2/3 capture shim) +
# (de)serialize the saved session layout for autosave/restore.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
# Native filesystem watching (FSEvents/ReadDirectoryChangesW/inotify) so the
# footer's git refreshes on external edits without polling — like VS Code.
notify-debouncer-mini = "0.4"
# App shell / chrome (tabs, splits, settings, …). The terminal renderer is
# hosted inside Iced via its custom `shader` widget (needs the wgpu + advanced
# features). Used by the `iced` binary; the raw winit spike (default bin) doesn't.
iced = { version = "0.13", features = ["wgpu", "advanced", "tokio", "svg", "image"] }
# Rasterize the logo SVG ourselves at the EXACT physical pixel size (1:1, no
# resampling) so it's crisp — iced nearest-samples SVGs and bilinear-softens
# downscaled rasters. Same engine iced uses internally; already in the tree.
resvg = "0.42"
# Native folder picker + message box for creating project workspaces.
rfd = "0.15"
# Procedural worktree avatars: draw a deterministic glyph from the branch name to
# an RGBA buffer. Pinned to resvg 0.42's tiny-skia so no duplicate crate is added.
tiny-skia = "0.11"

# Platform-native glyph rasterisation so terminal text matches the OS's own text
# rendering (and thus the webview): CoreText on macOS. Versions pinned to those
# already in the tree (via winit) to avoid duplicate Apple crates.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"
core-text = "20"
# Reposition the macOS traffic lights to match the web (Tauri trafficLightPosition
# {14,22}); iced/winit expose no API. objc2 versions pinned to those already in the
# tree (via winit) to avoid duplicate crates.
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSGeometry"] }
# Block-based NSNotificationCenter observer so the traffic lights re-inset
# synchronously when AppKit posts NSWindowDidResize (no resize flicker).
block2 = "0.5"

