[package]
name = "arbiter-native"
version = "1.0.0"
edition = "2021"
publish = false
description = "Native (no-webview) Arbiter — Phase 0 spike. See ../NATIVE_PLAN.md"
# Don't auto-discover bins: src/bin/file_icons.rs is a *module* of iced_shell
# (sibling of the crate root), not a binary. List the real bins explicitly.
autobins = false

[[bin]]
name = "arbiter-native"
path = "src/main.rs"

[[bin]]
name = "iced_shell"
path = "src/bin/iced_shell.rs"

[dependencies]
# Reuse the same PTY layer the shipping app uses (vendored, cross-platform/ConPTY).
portable-pty = { path = "../src-tauri/portable-pty" }
# Same VT parser + cell grid the shipping app already uses.
alacritty_terminal = "0.26"
# Native window + GPU (no webview). wgpu pinned to 0.19 to match Iced 0.13's
# wgpu, so the terminal renderer's types interoperate with Iced's shader widget.
winit = "0.30"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
# Glyph metrics (ab_glyph) + cross-platform system-font discovery (fontdb).
ab_glyph = "0.2"
fontdb = "0.18"
# Glyph rasterisation with hinting — the same rasteriser Iced uses, so terminal
# text is as crisp as the chrome at 1x (ab_glyph is unhinted → soft at 12px).
swash = "0.1"
# Per-OS data dir (zsh shell-integration files) + process-tree scan (Claude detection).
dirs = "5"
# Build/parse Claude's statusLine + hook JSON (the Tier-2/3 capture shim) +
# (de)serialize the saved session layout for autosave/restore.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
# Native filesystem watching (FSEvents/ReadDirectoryChangesW/inotify) so the
# footer's git refreshes on external edits without polling — like VS Code.
notify-debouncer-mini = "0.4"
# App shell / chrome (tabs, splits, settings, …). The terminal renderer is
# hosted inside Iced via its custom `shader` widget (needs the wgpu + advanced
# features). Used by the `iced` binary; the raw winit spike (default bin) doesn't.
iced = { version = "0.13", features = ["wgpu", "advanced", "tokio", "svg", "image"] }
# Rasterize the logo SVG ourselves at the EXACT physical pixel size (1:1, no
# resampling) so it's crisp — iced nearest-samples SVGs and bilinear-softens
# downscaled rasters. Same engine iced uses internally; already in the tree.
resvg = "0.42"
# Native folder picker + message box for creating project workspaces.
rfd = "0.15"
# Procedural worktree avatars: draw a deterministic glyph from the branch name to
# an RGBA buffer. Pinned to resvg 0.42's tiny-skia so no duplicate crate is added.
tiny-skia = "0.11"

# Claude usage bars: a tiny SIDECAR binary (arbiter-usage-helper) hosts a native
# webview (WebView2 on Windows, WKWebView on macOS) to log into claude.ai and poll
# the usage API, streaming JSON to the main app over stdout. Webview is fully
# isolated in its own process — the terminal stays native. Optional + feature-gated
# so normal `iced_shell` builds don't compile wry/tao.
wry = { version = "0.45", optional = true }
tao = { version = "0.30", optional = true }
# Standard Edit menu (Cut/Copy/Paste/Select-All) for the sign-in window so Cmd+V
# works in the claude.ai webview (macOS needs a menu item to bind ⌘V).
muda = { version = "0.13", optional = true }

[features]
usage-helper = ["dep:wry", "dep:tao", "dep:muda"]

# The sidecar binary; only built when the `usage-helper` feature is on, so the
# heavy webview deps stay out of normal main-app builds.
[[bin]]
name = "arbiter-usage-helper"
path = "src/bin/usage_helper.rs"
required-features = ["usage-helper"]

# Platform-native glyph rasterisation so terminal text matches the OS's own text
# rendering (and thus the webview): CoreText on macOS. Versions pinned to those
# already in the tree (via winit) to avoid duplicate Apple crates.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"
core-text = "20"
# Reposition the macOS traffic lights to match the web (Tauri trafficLightPosition
# {14,22}); iced/winit expose no API. objc2 versions pinned to those already in the
# tree (via winit) to avoid duplicate crates.
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSGeometry"] }
# Block-based NSNotificationCenter observer so the traffic lights re-inset
# synchronously when AppKit posts NSWindowDidResize (no resize flicker).
block2 = "0.5"

# Windows-native glyph rasterisation (DirectWrite + Direct2D + WIC): system font
# fallback + colour emoji, the OS-native equivalent of the macOS CoreText path.
# Only pulled when targeting Windows.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Dxgi_Common",
] }

